Added a folder for the audio. Implemented logic for loading and playing the audio from a wav file using the ofSoundPlayer library. Successfully played the audio in the folder.

--- a/finalProject-sdesai51.vcxproj
+++ b/finalProject-sdesai51.vcxproj
@@ -207,6 +207,9 @@
   <ItemGroup>
     <Image Include="src\sunset.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="audio\audioBeats.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ProjectExtensions>
     <VisualStudio>
