--- a/finalProject-sdesai51.vcxproj.filters
+++ b/finalProject-sdesai51.vcxproj.filters
@@ -46,4 +46,9 @@
       <Filter>images</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="audio\audioBeats.wav">
+      <Filter>audio</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
