Updated proposal md to reflect the change in the library I used. Instead of the image library, I made use of the graphics library more during the development of this project.

--- a/finalProject-sdesai51.vcxproj
+++ b/finalProject-sdesai51.vcxproj
@@ -209,6 +209,7 @@
   </ItemGroup>
   <ItemGroup>
     <Media Include="audio\audioBeats.wav" />
+    <Media Include="audio\epiphany.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ProjectExtensions>
