--- a/finalProject-sdesai51.vcxproj.filters
+++ b/finalProject-sdesai51.vcxproj.filters
@@ -50,5 +50,8 @@
     <Media Include="audio\audioBeats.wav">
       <Filter>audio</Filter>
     </Media>
+    <Media Include="audio\epiphany.wav">
+      <Filter>audio</Filter>
+    </Media>
   </ItemGroup>
 </Project>
